[fix] blurry img tags in webkit

--- a/assets/css/embed/_base_embed.styl
+++ b/assets/css/embed/_base_embed.styl
@@ -5,5 +5,6 @@
 .mt-share-item
   width: 36px
   height: 36px
+  backface-visibility: hidden
   margin-right: 10px
   display: inline-block
